# Object_Oriented_Programming

./: 3rd_problem-02.cpp  README.md
design/: 1st_problem-01.cpp  1st_problem-02.cpp  1st_problem-03.cpp  1st_problem-04.cpp  1st_problem-05.cpp  1st_problem-06.cpp  1st_problem-07.cpp  1st_problem-08.cpp  1st_problem-09.cpp  1st_problem-10.cpp  1st_problem-11.cpp  1st_problem-12.cpp  2nd_problem-01.cpp  2nd_problem-02.cpp  2nd_problem-03.cpp  2nd_problem-04.cpp  2nd_problem-05.cpp  2nd_problem-06.cpp  2nd_problem-07.cpp  2nd_problem-08.cpp  2nd_problem-09.cpp  2nd_problem-10.cpp  2nd_problem-11.cpp  2nd_problem-12.cpp  3rd_problem-01.cpp  3rd_problem-03.cpp  3rd_problem-04.cpp  3rd_problem-05.cpp  3rd_problem-06.cpp  3rd_problem-07.cpp  3rd_problem-08.cpp  3rd_problem-09.cpp  3rd_problem-10.cpp  3rd_problem-11.cpp  3rd_problem-12.cpp
othello_project/: CMakeLists.txt  board.cpp  board.h  board_widget.cpp  board_widget.h  game_window.cpp  game_window.h  game_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  replay_window.cpp  replay_window.h  replay_window.ui  result_dialog.cpp  result_dialog.h  result_dialog.ui  setting_dialog.cpp  setting_dialog.h  setting_dialog.ui  setting_window.cpp  setting_window.h  setting_window.ui  start.cpp  start.h  start.ui  turn_indicator_widget.cpp  turn_indicator_widget.h
